--- a/css/screen.css
+++ b/css/screen.css
@@ -731,7 +731,7 @@ body.nav-opened .nav {
 
 /* Stop it bouncing and increase contrast when hovered */
 .scroll-down:hover {
-    color: #fff;
+    color: #00FF00;
     -webkit-animation: alternate;
     animation: alternate;
 }
@@ -1485,8 +1485,8 @@ body:not(.post-template) .post-title {
     transition: all 0.5s ease;
 }
 .btn-bootstrap-2:hover {
-    /*color: #fff;*/
-    background-color: #000;
+    color: #00FF00;
+    border-color: #00FF00;
     opacity: 0.7;
     color: rgba(255,255,255,0.7);
 }
@@ -1526,6 +1526,7 @@ body:not(.post-template) .post-title {
         padding: 15% 0;
     }
 
+
     .scroll-down,
     .home-template .main-header:after { display: none; }
 
@@ -1543,10 +1544,15 @@ body:not(.post-template) .post-title {
         height: 70px;
         width: 70px;
     }
-
+  
     .page-title {
         font-size: 4rem;
         letter-spacing: -1px;
+        color: #bfc8cd;
+    }
+
+    .page-title:hover{
+      color: #00FF00;
     }
 
     .page-description {
