--- a/css/screen.css
+++ b/css/screen.css
@@ -2004,7 +2004,7 @@ canvas {
   width: 100%;
   height: 100%;
   background-color: #2FA7DC;
-  background-image: url("../images/screen.jpg");
+  background-image: url("../images/screen.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
