--- a/css/screen.css
+++ b/css/screen.css
@@ -488,65 +488,7 @@ body.nav-opened .site-wrapper {
             transition: transform 0.3s ease;
 }
 
-.controlls {
-    position: fixed;
-    z-index: 10;
-    top: 50%;
-    right: 3%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-  }
-  
-  .controlls .active-btn {
-    background-color: var(--color-secondary) !important;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-  }
-  
-  .controlls .active-btn i {
-    color: var(--color-white) !important;
-  }
-  
-  .controlls .control {
-    padding: 1rem;
-    cursor: pointer;
-    background-color: var(--color-grey-4);
-    width: 55px;
-    height: 55px;
-    border-radius: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin: .7rem 0;
-    -webkit-box-shadow: var(--box-shadow-1);
-            box-shadow: var(--box-shadow-1);
-  }
-  
-  .controlls .control i {
-    font-size: 1.2rem;
-    color: var(--color-grey-2);
-    pointer-events: none;
-  }
-  
+
 /* ==========================================================================
    4. General - The main styles for the the theme
    ========================================================================== */
@@ -580,6 +522,59 @@ body.nav-opened .site-wrapper {
 }
 
 /* Navigation */
+
+.navbar {
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+.navbar__container {
+  display: flex;
+  justify-content: space-between;
+  height: 80px;
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 50px;
+}
+.navbar__menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+.navbar__item {
+  height: 80px;
+}
+
+.navbar__links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 125px;
+  text-decoration: none;
+  height: 100%;
+  transition: all 0.3s ease;
+}
+
+.navbar__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
+  width: 100%;
+}
+.navbar__links:hover {
+  color: #00e043;
+  transition: all 0.3s ease;
+}
+
 body.nav-opened .nav-cover {
     position: fixed;
     top: 0;
