Added About Us Page

--- a/css/screen.css
+++ b/css/screen.css
@@ -520,6 +520,7 @@ body.nav-opened .site-wrapper {
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
 }
+/*About Section*/
 
 /* Navigation */
 
