--- a/css/screen.css
+++ b/css/screen.css
@@ -530,7 +530,7 @@ body.nav-opened .site-wrapper {
   justify-content: center;
   align-items: center;
   font-size: 1.5rem;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 999;
 }
