--- a/css/screen.css
+++ b/css/screen.css
@@ -468,9 +468,6 @@ margin on the iframe, cause it breaks stuff. */
     display: table-cell;
     vertical-align: middle;
 }
-.vertical h1:hover{
-  color: #00FF00;
-}
 
 /* Wraps the main content & footer */
 .site-wrapper {
@@ -516,7 +513,6 @@ body.nav-opened .site-wrapper {
 .main-nav {
     position: relative;
     padding: 35px 40px;
-    margin-top: 10%;
     margin: 0 0 100px 0;
 }
 
@@ -524,65 +520,8 @@ body.nav-opened .site-wrapper {
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
 }
-/*About Section*/
 
 /* Navigation */
-
-.navbar {
-  height: 80px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 2rem;
-  position: fixed;
-  top: 0;
-  z-index: 999;
-}
-.navbar__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 80px;
-  z-index: 1;
-  width: 100%;
-  max-width: 1300px;
-  margin: 1.5% auto;
-  padding: 0 50px;
-  float: right;
-}
-.navbar__menu {
-  display: flex;
-  align-items: center;
-  list-style: none;
-}
-
-.navbar__item {
-  height: 80px;
-}
-
-.navbar__links {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 125px;
-  text-decoration: none;
-  height: 100%;
-  transition: all 0.3s ease;
-  color:rgba(255,255,255,0.7);
-}
-
-.navbar__btn {
-  display: flex;
-  justify-content: center;
-  align-items: right;
-  padding: 0 1rem;
-  width: 100%;
-}
-.navbar__links:hover {
-  color: #00e043;
-  transition: all 0.3s ease;
-}
-
 body.nav-opened .nav-cover {
     position: fixed;
     top: 0;
@@ -600,7 +539,7 @@ body.nav-opened .nav-cover {
     z-index: 5;
     width: 240px;
     opacity: 0;
-    background: rgba(0,0,0,0.15);
+    background: #111;
     margin-bottom: 0;
     text-align: left;
     overflow-y: auto;
@@ -611,8 +550,7 @@ body.nav-opened .nav-cover {
 font-family: "Open Sans","Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
 font-weight: 700;
 font-size: 11px;
-color: rgba(255,255,255,0.7);
-background: rgba(0, 0, 0, 0.39);
+color: #909090;
 }
 
 body.nav-closed .nav {
@@ -914,10 +852,8 @@ body.nav-opened .menu-button .word {
 
 .main-nav.overlay a:hover {
     color: #222;
-    /* border-color: #fff; */
-    /* background: #fff; */
-    color: #00e043;
-  transition: all 0.3s ease;
+    border-color: #fff;
+    background: #fff;
 }
 
 /* Add a border to the buttons on hover */
@@ -934,11 +870,8 @@ body.nav-opened .menu-button .word {
     font-weight: 700;
     font-family: "Open Sans", sans-serif;
     color: #fff;
-    display: inline-block;
 }
-.page-title a:hover{
-  color:#00FF00;
-}
+
 .page-description {
     margin: 0;
     font-size: 2rem;
@@ -962,13 +895,7 @@ body.nav-opened .menu-button .word {
 .no-cover .page-description {
     color: rgba(0,0,0,0.5);
 }
-.random{
-    display: inline-block;
-}
-.fcol{
-    color: rgba(255, 255, 255, 0.578);
-    margin-top: 30%;
-}
+
 .no-cover .main-nav.overlay .menu-button {
     color: rgba(0,0,0,0.4);
     border-color: rgba(0,0,0,0.3);
@@ -1626,7 +1553,6 @@ body:not(.post-template) .post-title {
         font-size: 4rem;
         letter-spacing: -1px;
         color: #bfc8cd;
-        padding: 10px;
     }
 
     .page-title:hover{
@@ -2078,7 +2004,7 @@ canvas {
   width: 100%;
   height: 100%;
   background-color: #2FA7DC;
-  background-image: url("../images/screen.webp");
+  background-image: url("../images/screen.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
@@ -2119,9 +2045,6 @@ canvas {
 
 .count-particles {
   border-radius: 0 0 3px 3px;
-}
-nav .fas {
-    display: none;
 }
 
 
