--- a/css/screen.css
+++ b/css/screen.css
@@ -21,6 +21,9 @@
 /* ==========================================================================
    0. Normalize.css v2.1.3 | MIT License | git.io/normalize | (minified)
    ========================================================================== */
+  *{
+    box-sizing: border-box;
+  }
    article, aside, details,
    figcaption, figure,
    footer, header, hgroup,
@@ -554,6 +557,16 @@
      align-items: center;
      list-style: none;
    }
+   @media(max-width: 868px){
+    .navbar__menu{
+        /* margin-top: 30em; */
+        max-width: 100%;
+        align-items: center;
+        display: inline-flex;
+        flex: 100;
+        justify-content: center;
+   };
+}
    
    .navbar__item {
      height: 80px;
@@ -580,7 +593,10 @@
      color: #00e043;
      transition: all 0.3s ease;
    }
-   
+   /* .navbar ul{
+    /* margin: 10px; */
+    display: flex;
+   } */
    body.nav-opened .nav-cover {
        position: fixed;
        top: 0;
