--- a/css/screen.css
+++ b/css/screen.css
@@ -1017,7 +1017,25 @@
        -webkit-hyphens: auto;
        hyphens: auto;
    }
-   
+
+   .web3{
+    display: inline-flex;
+    align-items: center;
+    height: 32px;
+    padding: 0 12px;
+    font-size: 13px;
+    font-weight: 500;
+    color: white;
+    background-color: rgb(238, 76, 12);
+    cursor: pointer;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 4px;
+    text-decoration: none;
+    font-family: system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: antialiased;
+    z-index: 99999999999;
+   }
    /* Add a little circle in the middle of the border-bottom on our .post
    just for the lolz and stylepoints. */
    .post:after {
