--- a/css/screen.css
+++ b/css/screen.css
@@ -582,6 +582,17 @@
      transition: all 0.3s ease;
      color:rgba(255,255,255,0.7);
    }
+   .navbar__linksw3 {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     width: 20rem;
+     margin-top: 2rem;
+     text-decoration: none;
+     height: 3.6rem;
+     transition: all 0.3s ease;
+     color:rgba(255,255,255,0.7);
+   }   
    .navbar__btn {
      display: flex;
      justify-content: center;
@@ -1019,14 +1030,13 @@
    }
 
    .web3{
-    display: inline-flex;
+    display: flex;
     align-items: center;
-    height: 32px;
+    height: 4rem;
     padding: 0 12px;
     font-size: 13px;
     font-weight: 500;
     color: white;
-    cursor: pointer;
     border: 1px solid rgb(255, 255, 255);
     border-radius: 4px;
     text-decoration: none;
