--- a/css/screen.css
+++ b/css/screen.css
@@ -7,16 +7,22 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-color: black;
-    z-index: 2;
 }
 .main-nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: black;
-    padding: 10px;
+    /* background-color: ; */
+    /* padding: 10px; */
 
+}
+body.nav-opened .nav-cover {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 240px;
+    bottom: 0;
+    z-index: 200;
 }
 .main-nav .navbar__menu{
     display: flex;
@@ -25,6 +31,7 @@
     justify-content: center;
     gap: 1em;
     margin-top: 14px;
+    margin-right: 2%;
 }
 .navbar__menu li a{
     text-decoration: none;
@@ -37,7 +44,7 @@
 .blog-logo i{
     color: #3ca33b;
 }
-@media screen and (max-width:768px) {
+@media screen and (max-width:815px) {
     .main-nav .navbar__menu{
         display: none;
     }
@@ -125,4 +132,82 @@ old stuff
 
 .site-footer a:hover {
     color: #50585D;
+}
+canvas {
+    display: block;
+    vertical-align: bottom;
+  }
+  /* ---- particles.js container ---- */
+  
+  #particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #2FA7DC;
+    background-image: url("../images/screen.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+
+  }
+  /* ---- stats.js ---- */
+  
+  .count-particles {
+    background: #000022;
+    position: absolute;
+    top: 48px;
+    left: 0;
+    width: 80px;
+    color: #13E8E9;
+    font-size: .8em;
+    text-align: left;
+    text-indent: 4px;
+    line-height: 14px;
+    padding-bottom: 2px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
+  }
+  
+  .js-count-particles {
+    font-size: 1.1em;
+  }
+  
+  #stats,
+  .count-particles {
+    -webkit-user-select: none;
+    margin-top: 5px;
+    margin-left: 5px;
+  }
+  
+  #stats {
+    border-radius: 3px 3px 0 0;
+    overflow: hidden;
+  }
+  
+  .count-particles {
+    border-radius: 0 0 3px 3px;
+  }
+ 
+  body {
+    overflow-x: hidden;
+    height: 100%;
+    max-height: 100%;
+    width: 100%;
+    font-family: "Merriweather", serif;
+    letter-spacing: 0.01rem;
+    font-size: 1.8rem;
+    line-height: 1.75em;
+    color: #3A4145;
+    -webkit-font-feature-settings: 'kern' 1;
+    -moz-font-feature-settings: 'kern' 1;
+    -o-font-feature-settings: 'kern' 1;
+    text-rendering: geometricPrecision;
+}
+.site-wrapper {
+    /*position: relative;*/
+    z-index: 10;
+    min-height: 100%;
+    background: #fff;
+    -webkit-transition: -webkit-transform 0.5s ease;
+            transition: transform 0.5s ease;
 }
