--- a/css/screen.css
+++ b/css/screen.css
@@ -115,7 +115,7 @@ old stuff
  
 .site-footer {
     position: relative;
-    margin: 8rem 0 0 0;
+    margin: 8rem 0 0;
     padding: 0.5rem 15px;
     border-top: #EBF2F6 1px solid;
     font-family: "Open Sans", sans-serif;
