--- a/css/screen.css
+++ b/css/screen.css
@@ -275,14 +275,14 @@ canvas {
     color: rgba(255,255,255,0.7);
     /*-webkit-animation: bounce 4s 2s infinite;
     animation: bounce 4s 2s infinite;*/
-    border: 1px solid transparent;
+    border: 1px solid #bfc8cd transparent;
     border-radius: 4px;
     padding: 6px 12px;
     margin-bottom: 0;
     font-weight: 400;
     /* height: 38px; */
     /* padding: 0 15px; */
-    border: #bfc8cd 1px solid;
+   
     opacity: 1;
     /* color: #9EABB3; */
     /* text-align: center; */
@@ -290,7 +290,7 @@ canvas {
     text-transform: uppercase;
     line-height: 35px;
     white-space: nowrap;
-    border-radius: 3px;
+    /* border-radius: 3px; */
     background: rgba(0, 0, 0, 0.39);
     transition: all 0.5s ease;
 }
@@ -298,7 +298,7 @@ canvas {
     color: #00FF00;
     border-color: #00FF00;
     opacity: 0.7;
-    color: rgba(255,255,255,0.7);
+    /* color: rgba(255,255,255,0.7); */
 }
 
 
