updated about-us page

--- a/css/screen.css
+++ b/css/screen.css
@@ -21,7 +21,7 @@
 /* ==========================================================================
    0. Normalize.css v2.1.3 | MIT License | git.io/normalize | (minified)
    ========================================================================== */
-  *{
+   *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -463,14 +463,14 @@
    .inner {
        position: relative;
        width: 80%;
-       max-width: 710px;
+       max-width: 1500px;
        margin: 0 auto;
    }
    
    /* Centres vertically yo. (IE8+) */
    .vertical {
-       display: table-cell;
-       vertical-align: middle;
+    display: table-cell;
+    vertical-align: middle;
    }
    .vertical h1:hover{
      color: #00FF00;
@@ -631,9 +631,9 @@
      transition: all 0.3s ease;
    }
    /* .navbar ul{
-    /* margin: 10px; */
+    /* margin: 10px; 
     display: flex;
-   } */
+   */
    body.nav-opened .nav-cover {
        position: fixed;
        top: 0;
@@ -885,9 +885,10 @@
        -moz-box-sizing: border-box;
        box-sizing: border-box;
        display: block;
-       height: 144px;
-       width: 144px;
+       height: 70px;
+       width: 70px;
        opacity: 0.6;
+       margin: 50%;
        /*
        border: #bfc8cd 1px solid;
        */
@@ -998,8 +999,29 @@
        font-family: "Merriweather", serif;
        letter-spacing: 0.01rem;
        color: rgba(255,255,255,0.8);
+       text-align: justify;
    }
-   
+
+   .link{
+    font-family: "Merriweather", serif;
+    letter-spacing: 0.01rem;
+    color: black;
+   }
+
+   .heading {
+    color: rgba(255,255,255,0.8);
+    font-family: "Merriweather", serif;
+    letter-spacing: 0.01rem;
+    font-size: 3rem;
+    text-align: left;
+   }
+
+   .content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   }
+
    .no-cover.main-header {
        min-height: 160px;
        max-height: 40vh;
@@ -1025,6 +1047,14 @@
     margin-top: 30%;
    }
 
+   .footer {
+    display: flex;
+   }
+
+   .about-us-footer {
+    display: grid;
+    grid-template-columns: auto auto;
+   }
    
    /* Add subtle load-in animation for content on the home page */
    .home-template .page-title {
@@ -1564,14 +1594,13 @@
    
    .site-footer {
        position: relative;
-       margin: 0rem 0 0 0;
+       margin: 8rem 0 0 0;
        padding: 0.5rem 15px;
        border-top: #EBF2F6 1px solid;
        font-family: "Open Sans", sans-serif;
        font-size: 1rem;
        line-height: 1.75em;
        color: #BBC7CC;
-       background: #ffffff;
    }
    
    .site-footer a {
@@ -1639,88 +1668,6 @@
        opacity: 0.7;
        color: rgba(255,255,255,0.7);
    }
-   @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-   .smh{
-    display: grid;
-    height: 100%;
-    width: 100%;
-    font-family: "Poppins", sans-serif;
-    place-items: center;
-    background: linear-gradient(315deg, #ffffff, #d7e1ec);
-   }
-   .wrapper {
-                display: inline-flex;
-                list-style: none;
-   }
-   .wrapper .icon{
-    position: relative;
-    background: #ffffff;
-    border-radius: 50%;
-    padding: 15px;
-    margin: 10px;
-    width: 50px;
-    height: 50px;
-    font-size: 18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
-    cursor: pointer;
-    transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-   }
-   .wrapper .tooltip{
-    position: absolute;
-    top: 0;
-    font-size: 14px;
-    background: #ffffff;
-    color: #ffffff;
-    padding: 5px 8px;
-    border-radius: 5px;
-    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    }
-    .wrapper .tooltip::before{
-        position: absolute;
-        content: "";
-        height: 8px;
-        width: 8px;
-        background: #ffffff;
-        bottom: -3px;
-        left: 50%;
-        transform: translate(-50%) rotate(45deg);
-        transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    }
-    .wrapper .icon:hover .tooltip{
-        top: -45px;
-        opacity: 1;
-        visibility: visible;
-        pointer-events: auto;
-    }
-    .wrapper .icon:hover a,
-    .wrapper .icon:hover .tooltip{
-        text-shadow: 0px -1px 0px rgba(0,0,0,0.1);
-    }
-    .wrapper .twitter:hover,
-    .wrapper .twitter:hover .tooltip,
-    .wrapper .twitter:hover .tooltip::before{
-        background: #1DA1F2;
-        color: #ffffff;
-    }
-    .wrapper .instagram:hover,
-    .wrapper .instagram:hover .tooltip,
-    .wrapper .instagram:hover .tooltip::before{
-        background:#E4405F;
-        color: #ffffff;
-    }
-    .wrapper .github:hover,
-    .wrapper .github:hover .tooltip,
-    .wrapper .github:hover .tooltip::before{
-        background: #333333;
-        color: #ffffff;
-    }
    
    /* ==========================================================================
       10. Media Queries - Smaller than 900px
@@ -2277,5 +2224,4 @@
    nav .fas {
        display: none;
    }
-  
- 
+   
