--- a/css/screen.css
+++ b/css/screen.css
@@ -34,28 +34,13 @@
    audio, canvas, video { display: inline-block; }
    audio:not([controls]) { display: none; height: 0; }
    [hidden], template { display: none; }
-   html {
-      font-family: sans-serif;
-      -ms-text-size-adjust: 100%;
-      -webkit-text-size-adjust: 100%;
-   }
-   body { margin: 0; }
-   a { background: transparent; }
    a:focus { outline: thin dotted; }
    a:active, a:hover { outline: 0; }
-   h1 { font-size: 2em; margin: 0.67em 0; }
    abbr[title] { border-bottom: 1px dotted; }
    b, strong { font-weight: 700; }
    dfn { font-style: italic; }
-   hr {
-      -moz-box-sizing: content-box;
-      box-sizing: content-box;
-      height: 0;
-   }
-   mark { background: #FF0; color: #000; }
    code, kbd, pre,
    samp { font-family: monospace, serif; font-size: 1em; }
-   pre { white-space: pre-wrap; }
    q { quotes: "\201C" "\201D" "\2018" "\2019"; }
    small { font-size: 80%; }
    sub, sup {
@@ -98,7 +83,6 @@
    button::-moz-focus-inner,
    input::-moz-focus-inner { border: 0; padding: 0; }
    textarea { overflow: auto; vertical-align: top; }
-   table { border-collapse: collapse; border-spacing: 0; }
    /* ==========================================================================
       1. Icons - Sets up the icon font and respective classes
       ========================================================================== */
@@ -176,6 +160,9 @@
        max-height: 100%;
        font-size: 62.5%;
        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        font-family: sans-serif;
+      -ms-text-size-adjust: 100%;
+      -webkit-text-size-adjust: 100%;
    }
    
    body {
@@ -192,6 +179,7 @@
        -moz-font-feature-settings: 'kern' 1;
        -o-font-feature-settings: 'kern' 1;
        text-rendering: geometricPrecision;
+       margin: 0;
    }
    
    ::-moz-selection {
@@ -219,6 +207,8 @@
        font-size: 5rem;
        letter-spacing: -2px;
        text-indent: -3px;
+       font-size: 2em; 
+       margin: 0.67em 0; 
    }
    
    h2 {
@@ -245,6 +235,7 @@
    a {
        color: #4A4A4A;
        transition: color 0.3s ease;
+       background: transparent; 
    }
    
    a:hover {
@@ -301,6 +292,9 @@
        border-top: #EFEFEF 1px solid;
        margin: 3.2em 0;
        padding: 0;
+       -moz-box-sizing: content-box;
+      box-sizing: content-box;
+      height: 0;
    }
    
    blockquote {
@@ -333,6 +327,8 @@
    
    mark {
        background-color: #FFC336;
+       background: #FF0; 
+       color: #000; 
    }
    
    code, tt {
@@ -348,13 +344,14 @@
    pre {
        -moz-box-sizing: border-box;
        box-sizing: border-box;
+       white-space: pre-wrap; 
        margin: 0 0 1.75em;
        border: #E3EDF3 1px solid;
        width: 100%;
        padding: 10px;
        font-family: Inconsolata, monospace, sans-serif;
        font-size: 0.9em;
-       white-space: pre;
+       /*white-space: pre;*/
        overflow: auto;
        background: #F7FAFB;
        border-radius: 3px;
@@ -390,6 +387,8 @@
        margin: 1.75em 0;
        width: 100%;
        max-width: 100%;
+       border-collapse: collapse; 
+      border-spacing: 0; 
        background-color: transparent;
    }
    
@@ -663,7 +662,7 @@
    font-weight: 700;
    font-size: 11px;
    color: rgba(255,255,255,0.7);
-   background: rgba(0, 0, 0, 0.39);
+   /*background: rgba(0, 0, 0, 0.39);*/
    }
    
    body.nav-closed .nav {
@@ -711,7 +710,7 @@
    .nav-close:after {
        content: '';
        position: absolute;
-       top: 0;
+       /*top: 0;*/
        width: 20px;
        height: 1px;
        background: rgb(150,150,150);
@@ -1294,19 +1293,7 @@
    }
    
    /* list of author links - location / url */
-   .author-meta {
-       padding: 0;
-       margin: 0;
-       list-style: none;
-       font-size: 1.4rem;
-       line-height: 1;
-       font-style: italic;
-       color: #9EABB3;
-   }
-   
-   .author-meta a {
-       color: #9EABB3;
-   }
+
    .author-meta a:hover {
        color: #111;
    }
@@ -1458,6 +1445,13 @@
    
    .author-meta {
        margin: 1.6rem 0;
+       padding: 0;
+       margin: 0;
+       list-style: none;
+       font-size: 1.4rem;
+       line-height: 1;
+       font-style: italic;
+       color: #9EABB3;
    }
    /* Location, website, and link */
    .author-profile .author-meta {
@@ -1473,6 +1467,8 @@
    }
    .author-meta a {
        text-decoration: none;
+       color: #9EABB3;
+
    }
    
    /* Turn off meta for page2+ to make room for extra
@@ -1642,8 +1638,8 @@
        text-decoration: none;
        color: rgba(255,255,255,0.7);
        /*-webkit-animation: bounce 4s 2s infinite;
-       animation: bounce 4s 2s infinite;*/
-       border: 1px solid transparent;
+       animation: bounce 4s 2s infinite;
+       border: 1px solid transparent;*/
        border-radius: 4px;
        padding: 6px 12px;
        margin-bottom: 0;
@@ -1658,7 +1654,7 @@
        text-transform: uppercase;
        line-height: 35px;
        white-space: nowrap;
-       border-radius: 3px;
+       /*border-radius: 3px;*/
        background: rgba(0, 0, 0, 0.39);
        transition: all 0.5s ease;
    }
@@ -1666,7 +1662,7 @@
        color: #00FF00;
        border-color: #00FF00;
        opacity: 0.7;
-       color: rgba(255,255,255,0.7);
+       /*color: rgba(255,255,255,0.7);*/
    }
    
    /* ==========================================================================
@@ -1698,7 +1694,7 @@
            -webkit-box-sizing: border-box;
            -moz-box-sizing: border-box;
            box-sizing: border-box;
-           height: auto;
+           /*height: auto;*/
            min-height: 240px;
            height: 60vh;
            padding: 15% 0;
@@ -1924,7 +1920,7 @@
        .post {
            width: 100%;
            max-width: 100%;
-           width: auto;
+           /*width: auto;*/
            margin-top: 8rem;
            margin-bottom: 2rem;
            margin-left: 16px;
@@ -2161,12 +2157,12 @@
       below this point, or it will probably fuck everything up.
       ========================================================================== */
    
-   /* ---- reset ---- */
+   /* ---- reset ---- 
    
    body {
      margin: 0;
-     /*font: normal 75% Arial, Helvetica, sans-serif;*/
-   }
+     /*font: normal 75% Arial, Helvetica, sans-serif;
+   }*/
    
    canvas {
      display: block;
@@ -2199,7 +2195,8 @@
      line-height: 14px;
      padding-bottom: 2px;
      font-family: Helvetica, Arial, sans-serif;
-     font-weight: bold;
+     font-weight: bold;      
+     border-radius: 0 0 3px 3px;
    }
    
    .js-count-particles {
@@ -2218,9 +2215,6 @@
      overflow: hidden;
    }
    
-   .count-particles {
-     border-radius: 0 0 3px 3px;
-   }
    nav .fas {
        display: none;
    }
